syntax = "proto3";

package pb;

// import "google/protobuf/timestamp.proto";

option go_package = "github.com/farhandwian/microservice/pb";

message CartItem {
  int32 ProductId = 1;
  string productName = 2;
  int32 price=3;
  string description = 4;
  int32 amounts = 5;
  string image=6;
  string status=7;
}

message Carts{
  string user_id=1;
  repeated CartItem items=2;
}

message AddCartRequest {
    int32 user_id = 1;
    repeated CartItem items =2;
}
  
message AddCartResponse {
    int32 user_id = 1;
    repeated CartItem item = 2;
}
  
  message GetCartRequest {
    int32 user_id = 1;
  }

  message GetCartResponse {
    int32 user_id = 1;
    repeated CartItem items = 2;
  }

  message DeleteCartRequest{
    int32 user_id=1;
  }

  message DeleteCartResponse{
    CartItem item = 1;
  }

  message DeleteItemCartRequest{
    int32 user_id=1;
    int32 ProductId=2;
  }

  message DeleteItemCartResponse{
    CartItem item = 1;
  }

  message UpdateRequest{
    int32 user_id=1;
    repeated CartItem items =2;
  }

  message UpdateResponse{
    CartItem item = 1;
  }


